<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondominus1"
    tools:context=".sobrenosActivity">


    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="2dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/e_mail"
            android:textColor="#FFFFFF"
            android:textSize="34sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/to"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="none"
            android:linksClickable="true"
            android:singleLine="true"
            android:text="soporte@sonyOS@sony.com"

            android:textColor="#A9A9A9"
            android:textSize="24sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/asunto"
            android:textColor="#FFFFFF"
            android:textSize="34sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/subject"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:ems="10"
            android:hint="@string/escribe_tu_asunto"
            android:inputType="textPersonName"
            android:textAlignment="textStart"
            android:textColor="@color/Celestino" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/introduce_tu_texto"
            android:textColor="#FFFFFF"
            android:textSize="34sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/message"
            android:layout_width="397dp"
            android:layout_height="260dp"
            android:ems="10"
            android:hint="@string/el_texto_del_mail_va_aqui"
            android:inputType="textPersonName"
            android:textAlignment="textStart"
            android:textColor="@color/Celestino"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnEnviar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Enviar" />

        <Button
            android:id="@+id/btnVolver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Volver" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>